--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,18 +2,18 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <h1 class="lead">YelpCamp</h1>
-            <!--<div class="list-group">-->
-            <!--    <li class="list-group-item active">Info 1</li>-->
-            <!--    <li class="list-group-item">Info 2</li>-->
-            <!--    <li class="list-group-item">Info 3</li>-->
-            <!--</div>-->
+            <p class="lead">YelpCamp</p>
+            <div class="list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= campground.image %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">$<%= campground.price %>/night</h4>
+                    <h4 class="pull-right">$9.00/night</h4>
                     <h4><a><%=campground.name%></a></h4>
                     <p><%= campground.description %></p>
                     <p>
