--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,12 +4,15 @@
     <div class="row">
         <h1 style="text-align: center">Register</h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/register" method="post">
+            <form action="register" method="post">
                 <div class="form-group">
                 <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
                 <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                <input class="form-control" type="text" name="adminCode" placeholder="admin code">
                 </div>
                 <div class="form-group">
                 <button class="form-control btn btn-lg btn-primary btn-block">Sign Up</button>
